# MAT1525_project_code

./: .gitignore  Readme.md  check_shape.py  dataset.py  evaluation.py  main_reconstruction.py  main_testing.py  main_training.py  pyproject.toml
arch/: beta_vae.py  utils.py  wae_gan.py  wgan.py
